# ai-test-hub

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  todo.md
backend/: .gitignore  Dockerfile  add_qwen_config.py  alembic.ini  main.py  pyproject.toml  requirements.txt  run.sh  seed.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 000000000001_add_ai_chat_and_knowledge_base_tables.py  0221dd3017e1_create_test_management_tables.py  30bf9ef33b4b_create_case_attachment_table.py  4739171df31e_init.py  710c36bc7de3_add_pipeline_type_to_ai_generation_task.py  7ae06c474002_add_test_case_execution_table.py  a1b2c3d4e5f6_create_case_comment_table.py  cf11e2ea706d_make_chat_message_file_message_id_.py  cf1bf5641705_add_analyzer_improver_prompt_fks.py  d4c4880b8b6f_add_p1_models.py
backend/app/: __init__.py  config.py  database.py  deps.py  main.py
backend/app/api/v1/: __init__.py
backend/app/common/: __init__.py
backend/app/common/api/: __init__.py  auth.py  dashboard.py  health.py
backend/app/common/models/: __init__.py  base.py  project.py  role.py  user.py
backend/app/common/schemas/: __init__.py  common.py  dashboard.py  user.py
backend/app/common/services/: __init__.py  auth_service.py
backend/app/common/utils/: __init__.py  ai_client.py  data_export.py  document.py  logger.py  pagination.py  screenshot.py
backend/app/modules/: __init__.py
backend/app/modules/ai_chat/: __init__.py
backend/app/modules/aitest/: __init__.py  utils.py
backend/app/modules/api_testing/: __init__.py
frontend/: env.d.ts  index.html  (+13 more)
(+276 files in other folders)
